Fix layout issue that made the inputs go to another row when you add a border.

--- a/styles.css
+++ b/styles.css
@@ -70,7 +70,7 @@ body {
 
 #gradient-picker {
     grid-row: 2;
-    grid-column: 2/ span 10;
+    grid-column: 2/ span 12;
 }
 
 .input-title {
